# ai_meeting_e2e

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  infrastructure-ci.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  meetings.py  questions.py  search.py  templates.py  webhooks.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  enums.py  insight.py  meeting.py  segment.py  user.py
backend/app/schemas/: auth.py  meeting.py  questions.py  search.py  template.py  user.py  webhook.py
backend/app/services/: embeddings.py  rag.py  s3.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: conftest.py
backend/tests/unit/: test_meeting_api.py
docs/: architecture.md
frontend/: Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/__tests__/: utils.test.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
infrastructure/: versions.tf
infrastructure/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/rds-postgres/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vpc/: main.tf  outputs.tf  variables.tf
scripts/db/: init.sql
scripts/localstack/: setup.sh
